syntax = "proto3";
package node;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;

enum ReqSourceType {
    FromAPI = 0;
    FromClusterSyncer = 1;
}

message RequestHeader {
    uint64 ID = 1; 
    int32 data_type = 2;
    int64 timestamp = 3;
}

message InternalRaftRequest {
    RequestHeader header = 1;
    bytes data = 2;
}

message BatchInternalRaftRequest {
    int32 req_num = 1 ;
    repeated InternalRaftRequest reqs = 2;
    int64 timestamp = 3;
    ReqSourceType type = 4;
    uint64 req_id = 5;
    // used for cluster log syncer
    uint64 orig_term = 6;
    uint64 orig_index = 7;
    string orig_cluster = 8;
}

enum SchemaChangeType {
    SchemaChangeAddHsetIndex = 0;
    SchemaChangeUpdateHsetIndex = 1;
    SchemaChangeDeleteHsetIndex = 2;
}

message SchemaChange {
    SchemaChangeType Type = 1;
    string Table = 2;
    bytes SchemaData = 3;
}
